--- a/css/style.css
+++ b/css/style.css
@@ -78,13 +78,9 @@ p {
                 border: 1px solid rgb(62, 62, 62);
                 border-radius: 0.5rem;
                 padding: 0.5rem;
+                min-width: fit-content;
             }
         }
-
-        #hamburger-menu:hover {
-            pointer-events: none;
-        }
-    
 }
 
 .author {
