--- a/css/styleoutput.css
+++ b/css/styleoutput.css
@@ -358,6 +358,9 @@
       max-width: 96rem !important;
     }
   }
+  .mx-0 {
+    margin-inline: calc(var(--spacing) * 0);
+  }
   .mx-0\.5 {
     margin-inline: calc(var(--spacing) * 0.5);
   }
@@ -460,6 +463,15 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
+  .h-1 {
+    height: calc(var(--spacing) * 1);
+  }
+  .h-1\/1 {
+    height: calc(1/1 * 100%);
+  }
+  .h-3 {
+    height: calc(var(--spacing) * 3);
+  }
   .h-3\/7 {
     height: calc(3/7 * 100%);
   }
@@ -468,6 +480,9 @@
   }
   .h-50 {
     height: calc(var(--spacing) * 50);
+  }
+  .h-full {
+    height: 100%;
   }
   .h-screen {
     height: 100vh;
@@ -493,11 +508,26 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
+  .w-2 {
+    width: calc(var(--spacing) * 2);
+  }
   .w-2\/7 {
     width: calc(2/7 * 100%);
+  }
+  .w-2\/9 {
+    width: calc(2/9 * 100%);
+  }
+  .w-2\/17 {
+    width: calc(2/17 * 100%);
+  }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
   }
   .w-3\/7 {
     width: calc(3/7 * 100%);
@@ -511,8 +541,14 @@
   .w-screen {
     width: 100vw;
   }
+  .max-w-1 {
+    max-width: calc(var(--spacing) * 1);
+  }
   .max-w-1\/5 {
     max-width: calc(1/5 * 100%);
+  }
+  .max-w-3 {
+    max-width: calc(var(--spacing) * 3);
   }
   .max-w-3\/5 {
     max-width: calc(3/5 * 100%);
@@ -1346,6 +1382,9 @@
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
+  .py-0 {
+    padding-block: calc(var(--spacing) * 0);
+  }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
   }
@@ -1408,6 +1447,9 @@
   .text-xs {
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
+  }
+  .text-\[0\.5rem\] {
+    font-size: 0.5rem;
   }
   .leading-none {
     --tw-leading: 1;
@@ -1934,6 +1976,13 @@
   .transform-view {
     transform-box: view-box;
   }
+  .group-hover\:block {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        display: block;
+      }
+    }
+  }
   .group-hover\:bg-\[rgba\(62\,62\,62\,0\.5\)\] {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
@@ -1946,6 +1995,29 @@
       @media (hover: hover) {
         border-style: var(--tw-border-style);
         border-width: 2px;
+      }
+    }
+  }
+  .max-lg\:hidden {
+    @media (width < 64rem) {
+      display: none;
+    }
+  }
+  .max-lg\:group-hover\:block {
+    @media (width < 64rem) {
+      &:is(:where(.group):hover *) {
+        @media (hover: hover) {
+          display: block;
+        }
+      }
+    }
+  }
+  .max-md\:group-hover\:block {
+    @media (width < 48rem) {
+      &:is(:where(.group):hover *) {
+        @media (hover: hover) {
+          display: block;
+        }
       }
     }
   }
@@ -1979,6 +2051,11 @@
       gap: calc(var(--spacing) * 2);
     }
   }
+  .md\:block {
+    @media (width >= 48rem) {
+      display: block;
+    }
+  }
   .md\:flex {
     @media (width >= 48rem) {
       display: flex;
@@ -1994,6 +2071,16 @@
       flex-direction: row-reverse;
     }
   }
+  .lg\:block {
+    @media (width >= 64rem) {
+      display: block;
+    }
+  }
+  .lg\:flex {
+    @media (width >= 64rem) {
+      display: flex;
+    }
+  }
   .lg\:h-28 {
     @media (width >= 64rem) {
       height: calc(var(--spacing) * 28);
@@ -2002,6 +2089,60 @@
   .lg\:max-h-28 {
     @media (width >= 64rem) {
       max-height: calc(var(--spacing) * 28);
+    }
+  }
+  .lg\:w-1\/4 {
+    @media (width >= 64rem) {
+      width: calc(1/4 * 100%);
+    }
+  }
+  .lg\:w-1\/9 {
+    @media (width >= 64rem) {
+      width: calc(1/9 * 100%);
+    }
+  }
+  .lg\:w-1\/17 {
+    @media (width >= 64rem) {
+      width: calc(1/17 * 100%);
+    }
+  }
+  .lg\:w-1\/18 {
+    @media (width >= 64rem) {
+      width: calc(1/18 * 100%);
+    }
+  }
+  .lg\:w-2\/17 {
+    @media (width >= 64rem) {
+      width: calc(2/17 * 100%);
+    }
+  }
+  .lg\:w-3\/4 {
+    @media (width >= 64rem) {
+      width: calc(3/4 * 100%);
+    }
+  }
+  .lg\:flex-row {
+    @media (width >= 64rem) {
+      flex-direction: row;
+    }
+  }
+  .lg\:gap-1 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 1);
+    }
+  }
+  .lg\:pt-28 {
+    @media (width >= 64rem) {
+      padding-top: calc(var(--spacing) * 28);
+    }
+  }
+  .min-lg\:group-hover\:block {
+    @media (width >= 64rem) {
+      &:is(:where(.group):hover *) {
+        @media (hover: hover) {
+          display: block;
+        }
+      }
     }
   }
 }
