--- a/css/styleoutput.css
+++ b/css/styleoutput.css
@@ -364,6 +364,12 @@
   .mx-0\.5 {
     margin-inline: calc(var(--spacing) * 0.5);
   }
+  .mx-1 {
+    margin-inline: calc(var(--spacing) * 1);
+  }
+  .mx-2 {
+    margin-inline: calc(var(--spacing) * 2);
+  }
   .mx-auto {
     margin-inline: auto;
   }
@@ -373,8 +379,17 @@
   .my-0\.5 {
     margin-block: calc(var(--spacing) * 0.5);
   }
+  .my-1 {
+    margin-block: calc(var(--spacing) * 1);
+  }
   .my-2 {
     margin-block: calc(var(--spacing) * 2);
+  }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
+  .mt-auto {
+    margin-top: auto;
   }
   .box-border {
     box-sizing: border-box;
@@ -1379,6 +1394,12 @@
   .object-top {
     object-position: top;
   }
+  .px-0 {
+    padding-inline: calc(var(--spacing) * 0);
+  }
+  .px-0\.5 {
+    padding-inline: calc(var(--spacing) * 0.5);
+  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
@@ -2091,6 +2112,21 @@
       max-height: calc(var(--spacing) * 28);
     }
   }
+  .lg\:max-h-44 {
+    @media (width >= 64rem) {
+      max-height: calc(var(--spacing) * 44);
+    }
+  }
+  .lg\:max-h-46 {
+    @media (width >= 64rem) {
+      max-height: calc(var(--spacing) * 46);
+    }
+  }
+  .lg\:max-h-48 {
+    @media (width >= 64rem) {
+      max-height: calc(var(--spacing) * 48);
+    }
+  }
   .lg\:w-1\/4 {
     @media (width >= 64rem) {
       width: calc(1/4 * 100%);
@@ -2131,9 +2167,20 @@
       gap: calc(var(--spacing) * 1);
     }
   }
+  .lg\:border-r {
+    @media (width >= 64rem) {
+      border-right-style: var(--tw-border-style);
+      border-right-width: 1px;
+    }
+  }
   .lg\:pt-28 {
     @media (width >= 64rem) {
       padding-top: calc(var(--spacing) * 28);
+    }
+  }
+  .lg\:pr-0\.5 {
+    @media (width >= 64rem) {
+      padding-right: calc(var(--spacing) * 0.5);
     }
   }
   .min-lg\:group-hover\:block {
@@ -2143,6 +2190,26 @@
           display: block;
         }
       }
+    }
+  }
+  .xl\:w-1\/4 {
+    @media (width >= 80rem) {
+      width: calc(1/4 * 100%);
+    }
+  }
+  .xl\:w-1\/5 {
+    @media (width >= 80rem) {
+      width: calc(1/5 * 100%);
+    }
+  }
+  .xl\:w-2\/9 {
+    @media (width >= 80rem) {
+      width: calc(2/9 * 100%);
+    }
+  }
+  .xl\:w-2\/11 {
+    @media (width >= 80rem) {
+      width: calc(2/11 * 100%);
     }
   }
 }
